fixing background not on ios + external links

--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -4,7 +4,6 @@
     background: url("../img/hero-bg-ds.png") top right no-repeat;
     background-size: cover;
     scale: 1.25;
-    background-attachment: fixed;
 }
 
 /* PORTFOLIO */
